Fixed nav alignment due to overflow, added current Education level

--- a/_sass/general/base.scss
+++ b/_sass/general/base.scss
@@ -2,4 +2,9 @@ html, body, .content-wrapper {
     height: 100%;
 }
 
+body {
+	background-color: $orange;
+	// overflow-y: scroll;
+}
+
 body > svg {display: none;}
