--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -4,7 +4,6 @@
 	height: 100%;
 	box-sizing: border-box;
 	padding-top: 140px;
-	overflow-x: hidden;
 }
 
 .technical-skills-wrapper {
@@ -45,6 +44,8 @@
 	align-content: center;
 	width: 100%;
 	min-height: calc(100% - 259px);
+	overflow-x: hidden;
+
 	&--work {
 		background-color: $grey;
 		width: 50%;
@@ -70,6 +71,7 @@
 
 	&__list {
 		list-style-type: none;
+		padding: 0;
 		&-item {
 			font-family: $body;
 			color: darken(white, 4%);
